[wcag] Fix contrast issues in license link

--- a/ckanext/nhm/theme/less/nhm.less
+++ b/ckanext/nhm/theme/less/nhm.less
@@ -1369,6 +1369,10 @@ iframe {
 .form-group .info-block {
   color: @grey4;
   font-size: @font-size-body-s;
+
+  a {
+    color: @primary3;
+  }
 }
 
 input[type="radio"], input[type="checkbox"] {
